add some styles

--- a/src/components/employeer-list-item/employeers-list-item.css
+++ b/src/components/employeer-list-item/employeers-list-item.css
@@ -1,6 +1,7 @@
 .list-group-item {
     padding: 15px 20px;
-    border-bottom: 1px solid #3d5a80;
+    border-bottom: 1px solid #39603D;
+    color: #3C403D;
 }
 
 .list-group-item:last-child {
