--- a/src/components/app-info/app-info.css
+++ b/src/components/app-info/app-info.css
@@ -1,6 +1,13 @@
+.header{
+    text-align: center;
+    margin-bottom: 15px;
+    color: #3C403D;
+    font-weight: 700;
+    text-transform: uppercase;
+}
 .app-info {
     padding: 25px;
-    background-color: #3d5a80;
+    background-color: #39603D;
     border-radius: 4px;
     box-shadow: 15px 15px 30px rgba(0, 0, 0, .15);
     color: #fff;
