--- a/src/components/employeers-add-form/employeers-add-form.css
+++ b/src/components/employeers-add-form/employeers-add-form.css
@@ -1,17 +1,24 @@
 .app-add-form {
-    margin-top: 30px;
-    padding: 25px;
-    background-color: #39603D;
-    border-radius: 4px;
-    box-shadow: 15px 15px 30px rgba(0, 0, 0, .15);
-    color: #fff;
+  margin-top: 30px;
+  padding: 25px;
+  background-color: #39603d;
+  border-radius: 4px;
+  box-shadow: 15px 15px 30px rgba(0, 0, 0, 0.15);
+  color: #fff;
 }
 
 .add-form {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .add-form input {
+ 
+  margin-right: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .add-form input {
     width: 350px;
     margin-right: 20px;
+  }
 }
