--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+#root {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
